# nvshmem_benchmark

./: .clangd  .gitignore  CMakeLists.txt  osu_nvshmem_put_bw.cu  osu_nvshmem_put_bw.sh  readme.md  shmem_put_bw.cu  shmem_put_bw.sh
alltoall_latency/: CMakeLists.txt  alltoall.cu  run.sh
broadcast/: .clangd  CMakeLists.txt  broadcast.cu  coll_test.h  utils.h
broadcast_host/: CMakeLists.txt  broadcast.cu  coll_test.h  run.sh
broadcast_host_simple/: .clangd  CMakeLists.txt  broadcast.cu  coll_test.h  run.sh
broadcast_simple/: CMakeLists.txt  broadcast_simple.cu  utils.cu  utils.h
fcollect_latency/: .clangd  CMakeLists.txt  fcollect.cu  run.sh
fcollect_latency_mpi/: run.sh
mpi_init_put_bw/: mpi_init_put_bw.cu  run.sh
mpi_init_put_bw/bw_test/: bw_test.cu  compile.sh  run.sh
mpi_init_put_bw/put_block/: compile.sh  mpi_init_put_bw.cu  run.sh
mpi_init_put_bw/put_on_block_example/: compile.sh  o1.cu  run.sh
putOnBlockExample/: CMakeLists.txt  putOnBlock.cu
put_bw/: CMakeLists.txt  mpi_init_put_bw.cu  put_bw_inside.cu  run.sh  test.sh
put_bw/iterate-inside-kernel/: mpi_init_put_bw.cu  run.sh
put_bw/iterate-outside-kernel/: CMakeLists.txt  put_bw_outside.cu  run.sh
put_bw/likeperftest/: compile.sh  mpi_init_put_bw.cu  run.sh
put_bw_naive/: CMakeLists.txt  put_bw_naive.cu
put_bw_naive_/: put_bw_naive.cu
put_bw_temp/: run.sh
put_bw_temp/iterate-inside-kernel/: CMakeLists.txt  CMakePresets.json
put_bw_temp/iterate-outside-kernel/: CMakeLists.txt  run.sh
put_latency/: CMakeLists.txt  compile.sh  compile_commands.json  iterate_inside_kernel.cu  run.sh
put_latency_nbi/: .clangd  CMakeLists.txt  compile_commands.json  iterate_inside_kernel.cu  run.sh
reduction/: CMakeLists.txt  reduction_latency.cu  utils.cu
scripts/: alltoall_latency.sh  broadcast.sh  broadcast_host.sh  broadcast_host_simple.sh  broadcast_simple.sh  fcollect_latency.sh  putOnBlock.sh  put_bw.sh  put_bw_naive.sh  put_latency_nbi.sh  reduction.sh  threadGroup.sh
threadGroupExample/: CMakeLists.txt  threadGroup.cu
